# pandacea

./: .gitignore  Cargo.toml  Panacea MCP Considerations.md  Pandacea - Anastomo README.docx  Pandacea Anastomo Briefing Document.docx  Pandacea Foundational Architecture Design v1.2.md  README.md  The AI-Native Builder is Coming - future work.md  build.rs  code_of_conduct.md  license.md  mcp.proto  mcp_spec.md  potential_mitigations_for_pandacea_challenges.md  readme.md
.github/workflows/: android.yml  cloud.yml
backend/: Cargo.toml  build.rs
backend/certs/: README.md  cert.pem  generate_certs.ps1  key.pem
backend/certs/private/: README.md
backend/examples/: README.md  agent_communication.rs  basic_communication_demo.rs  consent_manager_demo.rs  simple_communication.rs
backend/proto/: mcp.proto
backend/src/: communication.rs  consent_manager.rs  coordination.rs  error.rs  lib.rs  sentinel.rs  serialization.rs  test_utils.rs  types.rs  utils.rs
backend/src/validation/: mod.rs  security.rs  semantics.rs  syntax.rs
backend/tests/: proto_compatibility.rs
cloud/auth-service/: package.json
cloud/coordinator/: coordinator.go
docs/: Pandacea Foundational Architecture Design v1.2.md  Pandacea Vision c6 (LLM-Readable Format).md  SECURITY.md  SECURITY_INCIDENT_RESPONSE.md  architecture.md  contributing.md  governance.md  mcp_specification.md  pandacea-roadmap (3).md  pandacea_whitepaper.md  potential_mitigations_for_pandacea_challenges.md  readme.md  roadmap.md  serialization.md  serialization_example.md  🛠 MCP Implementation Tips for Agentic and Context-Rich Systems.md
exampledocstolearnfrom/: Anastomo MVP Architecture Diagram.docx  Anastomo MVP Timeline (20 Weeks).docx  Pandacea - Anastomo Core Data Schemas (MVP).docx  Pandacea - Anastomo Updated Core Data Schemas.txt  Pandacea Vignette - Anastomo.docx  Proposed API Structure (MVP).docx  Testing & QA Milestones.docx  Tiered Consent & Query Lifecycle.docx  UX Sketches (Conceptual).docx  Updated Pandacea - Anastomo Project Overview.docx
frontend/: package.json
pandacea/: mcp.proto
proto/: mcp.proto
sdk/: package.json
src/: builders.rs  crypto.rs  error.rs  lib.rs  sentinel.rs  serialization.rs  types.rs  utils.rs  validation.rs
validation/: mod.rs  security.rs  semantics.rs  syntax.rs
(+30 files in other folders)
