[package]
name = "pandacea-mcp"
version = "0.1.0"
edition = "2021"
description = "Pandacea Model Context Protocol (MCP) implementation"
license = "Apache-2.0" # Or your chosen license

[dependencies]
prost = "0.12"
prost-types = "0.12" # Added direct dependency
prost-wkt-types = "0.5" # Added for well-known types
tokio = { version = "1", features = ["full"] } # Full features for now, can prune later
bytes = "1"
chrono = { version = "0.4", features = ["serde"] } # For Timestamp conversion
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For google.protobuf.Struct handling
ring = "0.17" # For crypto operations (signing/verification)
uuid = { version = "1", features = ["v4"] } # For generating unique IDs
thiserror = "1.0" # Added for error handling
hex = "0.4" # Added for key ID generation example


[build-dependencies]
prost-build = "0.12" 