[package]
name = "pandacea"
version = "0.1.0"
edition = "2021"
description = "Pandacea Model Context Protocol (MCP) implementation"
license = "Apache-2.0" # Or your chosen license

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4", features = ["serde"] } # For Timestamp conversion
prost = "0.12.3"
prost-types = "0.12.3" # Added direct dependency
prost-wkt-types = "0.5" # Added for well-known types
tokio = { version = "1", features = ["full"] } # Full features for now, can prune later
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For google.protobuf.Struct handling
ring = "0.17.8" # For crypto operations (signing/verification)
uuid = { version = "1.6", features = ["v4"] } # For generating unique IDs
thiserror = "1.0.58" # Added for error handling
hex = "0.4" # Added for key ID generation example

# Added for crypto refactor
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
signature = { version = "2.2", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
pkcs8 = { version = "0.10", features = ["alloc"] }
rand = "0.8" # Added main rand crate

# Added for canonical serialization
ciborium = "0.2.2" # RFC 7049 compliant CBOR implementation with deterministic encoding

[build-dependencies]
prost-build = "0.12.3" 